--- a/105. Construct Binary Tree from Preorder and Inorder Traversal.ipynb
+++ b/105. Construct Binary Tree from Preorder and Inorder Traversal.ipynb
@@ -30,8 +30,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DFS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O( n^2 )$**  \n",
+    "**空間複雜度: $O( n )$**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Optional\n",
+    "class Solution:\n",
+    "    def buildTree(self, preorder: List[int], inorder: List[int]) -> Optional[TreeNode]: # time: O(n^2), space: O(n)\n",
+    "        # 如果前序或中序為空，代表沒有節點可建，返回 None\n",
+    "        if not preorder or not inorder:\n",
+    "            return None\n",
+    "        \n",
+    "        # 建立根節點，根節點為前序遍歷的第一個元素\n",
+    "        root = TreeNode(preorder[0])\n",
+    "        print(f\"\\n{preorder = }, {inorder = }\")\n",
+    "        print(f\"{root.val = }\")\n",
+    "\n",
+    "        # 在中序遍歷中找到根節點的位置，左邊的都是左子樹的節點\n",
+    "        mid = inorder.index(preorder[0])  # time: O(n)\n",
+    "        print(f\"root的左邊有 ({mid = }) 個節點\")\n",
+    "\n",
+    "        preorder_left_nodes = preorder[1:mid+1] # preorder 中左子樹的部分，去除:root(第1個)，left的結尾會落在(mid+1)，總共才會是mid個\n",
+    "        preorder_right_nodes = preorder[mid+1:] # preorder 中右子樹的部分，去除:left(mid個)+root(1個)\n",
+    "        inorder_left_nodes = inorder[:mid] # inorder 中左子樹的部分\n",
+    "        inorder_right_nodes = inorder[mid+1:] # inorder 中右子樹的部分\n",
+    "        print(f\"-> {preorder_left_nodes = }\")\n",
+    "        print(f\"-> {preorder_right_nodes = }\")\n",
+    "        print(f\"-> {inorder_left_nodes = }\")\n",
+    "        print(f\"-> {inorder_right_nodes = }\")\n",
+    "        \n",
+    "        # 遞迴建立左子樹與右子樹\n",
+    "        root.left = self.buildTree(preorder=preorder_left_nodes, inorder=inorder_left_nodes) # time: O(n)\n",
+    "        root.right = self.buildTree(preorder=preorder_right_nodes, inorder=inorder_right_nodes) # time: O(n)\n",
+    "        print(f\"{root.val = }\")\n",
+    "        print(f\"{root.left.val = }\") if root.left else print(f\"{root.left = }\")\n",
+    "        print(f\"{root.right.val =}\") if root.right else print(f\"{root.right = }\")\n",
+    "\n",
+    "        return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "preorder = [3, 9, 20, 15, 7], inorder = [9, 3, 15, 20, 7]\n",
+      "root.val = 3\n",
+      "root的左邊有 (mid = 1) 個節點\n",
+      "-> preorder_left_nodes = [9]\n",
+      "-> preorder_right_nodes = [20, 15, 7]\n",
+      "-> inorder_left_nodes = [9]\n",
+      "-> inorder_right_nodes = [15, 20, 7]\n",
+      "\n",
+      "preorder = [9], inorder = [9]\n",
+      "root.val = 9\n",
+      "root的左邊有 (mid = 0) 個節點\n",
+      "-> preorder_left_nodes = []\n",
+      "-> preorder_right_nodes = []\n",
+      "-> inorder_left_nodes = []\n",
+      "-> inorder_right_nodes = []\n",
+      "root.val = 9\n",
+      "root.left = None\n",
+      "root.right = None\n",
+      "\n",
+      "preorder = [20, 15, 7], inorder = [15, 20, 7]\n",
+      "root.val = 20\n",
+      "root的左邊有 (mid = 1) 個節點\n",
+      "-> preorder_left_nodes = [15]\n",
+      "-> preorder_right_nodes = [7]\n",
+      "-> inorder_left_nodes = [15]\n",
+      "-> inorder_right_nodes = [7]\n",
+      "\n",
+      "preorder = [15], inorder = [15]\n",
+      "root.val = 15\n",
+      "root的左邊有 (mid = 0) 個節點\n",
+      "-> preorder_left_nodes = []\n",
+      "-> preorder_right_nodes = []\n",
+      "-> inorder_left_nodes = []\n",
+      "-> inorder_right_nodes = []\n",
+      "root.val = 15\n",
+      "root.left = None\n",
+      "root.right = None\n",
+      "\n",
+      "preorder = [7], inorder = [7]\n",
+      "root.val = 7\n",
+      "root的左邊有 (mid = 0) 個節點\n",
+      "-> preorder_left_nodes = []\n",
+      "-> preorder_right_nodes = []\n",
+      "-> inorder_left_nodes = []\n",
+      "-> inorder_right_nodes = []\n",
+      "root.val = 7\n",
+      "root.left = None\n",
+      "root.right = None\n",
+      "root.val = 20\n",
+      "root.left.val = 15\n",
+      "root.right.val =7\n",
+      "root.val = 3\n",
+      "root.left.val = 9\n",
+      "root.right.val =20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.TreeNode at 0x105f2f740>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Input: \n",
+    "preorder = [3,9,20,15,7]\n",
+    "inorder  = [9,3,15,20,7]\n",
+    "# Output: [3,9,20,null,null,15,7]\n",
+    "\n",
+    "Solution().buildTree(preorder, inorder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,8 +287,8 @@
       "- return None, 2\n",
       "9 - right = None, preorder_end(右子樹的起始位置) = 2\n",
       "9 - left  = None\n",
-      "- return <__main__.TreeNode object at 0x000002A6930DC400>, 2\n",
-      "3 - left = <__main__.TreeNode object at 0x000002A6930DC400>, preorder_end(右子樹的起始位置) = 2\n",
+      "- return <__main__.TreeNode object at 0x105f2ed80>, 2\n",
+      "3 - left = <__main__.TreeNode object at 0x105f2ed80>, preorder_end(右子樹的起始位置) = 2\n",
       "3 - right\n",
       "preorder_start = preorder_end = 2, inorder_start = (root_index + 1) = (1 + 1), inorder_end = 5\n",
       "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
@@ -167,8 +316,8 @@
       "- return None, 4\n",
       "15 - right = None, preorder_end(右子樹的起始位置) = 4\n",
       "15 - left  = None\n",
-      "- return <__main__.TreeNode object at 0x000002A6930DC610>, 4\n",
-      "20 - left = <__main__.TreeNode object at 0x000002A6930DC610>, preorder_end(右子樹的起始位置) = 4\n",
+      "- return <__main__.TreeNode object at 0x105f2f7a0>, 4\n",
+      "20 - left = <__main__.TreeNode object at 0x105f2f7a0>, preorder_end(右子樹的起始位置) = 4\n",
       "20 - right\n",
       "preorder_start = preorder_end = 4, inorder_start = (root_index + 1) = (3 + 1), inorder_end = 5\n",
       "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
@@ -190,22 +339,22 @@
       "- return None, 5\n",
       "7 - right = None, preorder_end(右子樹的起始位置) = 5\n",
       "7 - left  = None\n",
-      "- return <__main__.TreeNode object at 0x000002A6930DC640>, 5\n",
-      "20 - right = <__main__.TreeNode object at 0x000002A6930DC640>, preorder_end(右子樹的起始位置) = 5\n",
-      "20 - left  = <__main__.TreeNode object at 0x000002A6930DC610>\n",
-      "- return <__main__.TreeNode object at 0x000002A6930DC670>, 5\n",
-      "3 - right = <__main__.TreeNode object at 0x000002A6930DC670>, preorder_end(右子樹的起始位置) = 5\n",
-      "3 - left  = <__main__.TreeNode object at 0x000002A6930DC400>\n",
-      "- return <__main__.TreeNode object at 0x000002A6930DC1F0>, 5\n"
+      "- return <__main__.TreeNode object at 0x105f2ce60>, 5\n",
+      "20 - right = <__main__.TreeNode object at 0x105f2ce60>, preorder_end(右子樹的起始位置) = 5\n",
+      "20 - left  = <__main__.TreeNode object at 0x105f2f7a0>\n",
+      "- return <__main__.TreeNode object at 0x105f2f7d0>, 5\n",
+      "3 - right = <__main__.TreeNode object at 0x105f2f7d0>, preorder_end(右子樹的起始位置) = 5\n",
+      "3 - left  = <__main__.TreeNode object at 0x105f2ed80>\n",
+      "- return <__main__.TreeNode object at 0x105f2e3f0>, 5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.TreeNode at 0x2a6930dc1f0>"
+       "<__main__.TreeNode at 0x105f2e3f0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4
  },
