--- a/105. Construct Binary Tree from Preorder and Inorder Traversal.ipynb
+++ b/105. Construct Binary Tree from Preorder and Inorder Traversal.ipynb
@@ -33,6 +33,241 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### DFS (Optimal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O( n )$**  \n",
+    "**空間複雜度: $O( n )$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Optional\n",
+    "\n",
+    "class Solution:\n",
+    "    def buildTree(self, preorder: List[int], inorder: List[int]) -> Optional[TreeNode]:\n",
+    "        # 紀錄目前處理到的前序遍歷和中序遍歷的索引位置\n",
+    "        self.preorder_index = 0\n",
+    "        self.inorder_index = 0\n",
+    "\n",
+    "        def dfs(parent_node_limit):\n",
+    "            # 若前序索引已超出範圍，代表樹已構建完畢，返回 None\n",
+    "            if self.preorder_index >= len(preorder):\n",
+    "                return None\n",
+    "\n",
+    "            # 如果目前中序節點值等於父節點限制值，代表左子樹已完成，返回 None\n",
+    "            if inorder[self.inorder_index] == parent_node_limit:\n",
+    "                self.inorder_index += 1  # 移動到下一個中序節點\n",
+    "                return None\n",
+    "\n",
+    "            # 建立目前的根節點\n",
+    "            root = TreeNode(preorder[self.preorder_index])\n",
+    "            self.preorder_index += 1  # 移動到下一個前序節點\n",
+    "\n",
+    "            # 遞迴構建左子樹，左子樹的邊界為當前 root 的值\n",
+    "            root.left = dfs(parent_node_limit = root.val)\n",
+    "            # 遞迴構建右子樹，右子樹的邊界與當前相同（父層傳下來的限制）\n",
+    "            root.right = dfs(parent_node_limit = parent_node_limit)\n",
+    "\n",
+    "            return root\n",
+    "\n",
+    "        # 初始呼叫，使用無窮大作為整棵樹的邊界\n",
+    "        return dfs(parent_node_limit = float(\"inf\")) # time: O(n), space: O(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.TreeNode at 0x12052d400>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Input: \n",
+    "preorder = [3,9,20,15,7]\n",
+    "inorder  = [9,3,15,20,7]\n",
+    "# Output: [3,9,20,null,null,15,7]\n",
+    "\n",
+    "Solution().buildTree(preorder, inorder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DFS + Hash Map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O( n )$**  \n",
+    "**空間複雜度: $O( n )$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Optional\n",
+    "\n",
+    "class Solution:\n",
+    "    def buildTree(self, preorder: List[int], inorder: List[int]) -> Optional[TreeNode]:\n",
+    "        # 建立一個字典，用來快速查詢某個節點值在中序遍歷中的索引位置\n",
+    "        indices = {value: idx for idx, value in enumerate(inorder)} # time: O(n)\n",
+    "\n",
+    "        # 使用類別屬性來紀錄目前在前序遍歷中的索引位置\n",
+    "        self.pre_index = 0\n",
+    "\n",
+    "        def dfs(left, right):\n",
+    "            # 若左邊界超過右邊界，代表此區間無節點，回傳 None\n",
+    "            if left > right:\n",
+    "                return None\n",
+    "            \n",
+    "            root_value = preorder[self.pre_index] # 取得目前前序遍歷中的根節點值\n",
+    "            root = TreeNode(root_value) # 建立根節點\n",
+    "            mid = indices[root_value] # 取得此根節點在中序遍歷中的索引位置\n",
+    "            \n",
+    "            print(\"-\" * 50)\n",
+    "            print(f\"{indices = }\")\n",
+    "            print(f\"{preorder = }\")\n",
+    "            print(f\"{inorder = }\")\n",
+    "            print(f\"\\n{left = }, {right = }\")\n",
+    "            print(f\"{preorder[left:right+1] = }\")\n",
+    "            print(f\"{inorder[left:right+1] = }\")\n",
+    "            print(f\"{self.pre_index = }, {root.val = }, {mid = }\")\n",
+    "\n",
+    "            self.pre_index += 1 # 將前序索引往右移，準備建構下一個節點\n",
+    "\n",
+    "            # 遞迴建構左子樹，範圍為中序的 left 到 mid - 1\n",
+    "            root.left = dfs(left, mid - 1)\n",
+    "\n",
+    "            # 遞迴建構右子樹，範圍為中序的 mid + 1 到 right\n",
+    "            root.right = dfs(mid + 1, right)\n",
+    "            print(f\"{root.val = }\")\n",
+    "            print(f\"{root.left.val = }\") if root.left else print(f\"{root.left = }\")\n",
+    "            print(f\"{root.right.val =}\") if root.right else print(f\"{root.right = }\")\n",
+    "\n",
+    "            return root\n",
+    "\n",
+    "        return dfs(0, len(preorder)-1) # time: O(n), space: O(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "indices = {9: 0, 3: 1, 15: 2, 20: 3, 7: 4}\n",
+      "preorder = [3, 9, 20, 15, 7]\n",
+      "inorder = [9, 3, 15, 20, 7]\n",
+      "\n",
+      "left = 0, right = 4\n",
+      "preorder[left:right+1] = [3, 9, 20, 15, 7]\n",
+      "inorder[left:right+1] = [9, 3, 15, 20, 7]\n",
+      "self.pre_index = 0, root.val = 3, mid = 1\n",
+      "--------------------------------------------------\n",
+      "indices = {9: 0, 3: 1, 15: 2, 20: 3, 7: 4}\n",
+      "preorder = [3, 9, 20, 15, 7]\n",
+      "inorder = [9, 3, 15, 20, 7]\n",
+      "\n",
+      "left = 0, right = 0\n",
+      "preorder[left:right+1] = [3]\n",
+      "inorder[left:right+1] = [9]\n",
+      "self.pre_index = 1, root.val = 9, mid = 0\n",
+      "root.val = 9\n",
+      "root.left = None\n",
+      "root.right = None\n",
+      "--------------------------------------------------\n",
+      "indices = {9: 0, 3: 1, 15: 2, 20: 3, 7: 4}\n",
+      "preorder = [3, 9, 20, 15, 7]\n",
+      "inorder = [9, 3, 15, 20, 7]\n",
+      "\n",
+      "left = 2, right = 4\n",
+      "preorder[left:right+1] = [20, 15, 7]\n",
+      "inorder[left:right+1] = [15, 20, 7]\n",
+      "self.pre_index = 2, root.val = 20, mid = 3\n",
+      "--------------------------------------------------\n",
+      "indices = {9: 0, 3: 1, 15: 2, 20: 3, 7: 4}\n",
+      "preorder = [3, 9, 20, 15, 7]\n",
+      "inorder = [9, 3, 15, 20, 7]\n",
+      "\n",
+      "left = 2, right = 2\n",
+      "preorder[left:right+1] = [20]\n",
+      "inorder[left:right+1] = [15]\n",
+      "self.pre_index = 3, root.val = 15, mid = 2\n",
+      "root.val = 15\n",
+      "root.left = None\n",
+      "root.right = None\n",
+      "--------------------------------------------------\n",
+      "indices = {9: 0, 3: 1, 15: 2, 20: 3, 7: 4}\n",
+      "preorder = [3, 9, 20, 15, 7]\n",
+      "inorder = [9, 3, 15, 20, 7]\n",
+      "\n",
+      "left = 4, right = 4\n",
+      "preorder[left:right+1] = [7]\n",
+      "inorder[left:right+1] = [7]\n",
+      "self.pre_index = 4, root.val = 7, mid = 4\n",
+      "root.val = 7\n",
+      "root.left = None\n",
+      "root.right = None\n",
+      "root.val = 20\n",
+      "root.left.val = 15\n",
+      "root.right.val =7\n",
+      "root.val = 3\n",
+      "root.left.val = 9\n",
+      "root.right.val =20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.TreeNode at 0x12052e240>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Input: \n",
+    "preorder = [3,9,20,15,7]\n",
+    "inorder  = [9,3,15,20,7]\n",
+    "# Output: [3,9,20,null,null,15,7]\n",
+    "\n",
+    "Solution().buildTree(preorder, inorder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### DFS"
    ]
   },
@@ -46,11 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List, Optional\n",
+    "\n",
     "class Solution:\n",
     "    def buildTree(self, preorder: List[int], inorder: List[int]) -> Optional[TreeNode]: # time: O(n^2), space: O(n)\n",
     "        # 如果前序或中序為空，代表沒有節點可建，返回 None\n",
@@ -63,7 +299,7 @@
     "        print(f\"{root.val = }\")\n",
     "\n",
     "        # 在中序遍歷中找到根節點的位置，左邊的都是左子樹的節點\n",
-    "        mid = inorder.index(preorder[0])  # time: O(n)\n",
+    "        mid = inorder.index(preorder[0]) # time: O(n)\n",
     "        print(f\"root的左邊有 ({mid = }) 個節點\")\n",
     "\n",
     "        preorder_left_nodes = preorder[1:mid+1] # preorder 中左子樹的部分，去除:root(第1個)，left的結尾會落在(mid+1)，總共才會是mid個\n",
@@ -87,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -154,207 +390,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.TreeNode at 0x105f2f740>"
+       "<__main__.TreeNode at 0x12056c080>"
       ]
      },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Input: \n",
-    "preorder = [3,9,20,15,7]\n",
-    "inorder  = [9,3,15,20,7]\n",
-    "# Output: [3,9,20,null,null,15,7]\n",
-    "\n",
-    "Solution().buildTree(preorder, inorder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Definition for a binary tree node.\n",
-    "# class TreeNode:\n",
-    "#     def __init__(self, val=0, left=None, right=None):\n",
-    "#         self.val = val\n",
-    "#         self.left = left\n",
-    "#         self.right = right\n",
-    "class Solution:\n",
-    "    def buildTree(self, preorder, inorder):\n",
-    "        print(f\"preorder = {preorder}\")\n",
-    "        print(f\"inorder = {inorder}\")\n",
-    "\n",
-    "        # 建立一個字典來映射inorder遍歷中每個節點的值和索引\n",
-    "        # enumerate(inorder) 返回 (索引, 節點值) \n",
-    "        # 使用 reversed 將 (索引, 節點值) 轉為 (節點值, 索引)\n",
-    "        self.inorder_index_map = dict(map(reversed, enumerate(inorder)))\n",
-    "        print(f\"inorder_index_map = {self.inorder_index_map}\")\n",
-    "\n",
-    "        # 調用 build_tree 函數來構建二叉樹，初始設置 preorder_start 為 0，inorder_start 為 0，inorder_end 為inorder遍歷的長度\n",
-    "        ans, _ = self.dfs(0, 0, len(inorder), preorder)\n",
-    "\n",
-    "        # 返回構建好的二叉樹的根節點\n",
-    "        return ans\n",
-    "\n",
-    "    def dfs(self, preorder_start, inorder_start, inorder_end, preorder):\n",
-    "        print(\"-\" * 150)\n",
-    "        print(f\"preorder_start = {preorder_start}, inorder_start = {inorder_start}, inorder_end = {inorder_end}\")\n",
-    "\n",
-    "        # 如果inorder的起始索引>=結束索引，表示子樹為空，返回 None 以及 preorder_start\n",
-    "        if inorder_start >= inorder_end:\n",
-    "            print(f\"- (inorder_start = {inorder_start}) >= (inorder_end = {inorder_end})\")\n",
-    "            print(f\"- return None, {preorder_start}\")\n",
-    "            return None, preorder_start\n",
-    "        \n",
-    "\n",
-    "        # 從preorder中取得根節點的值\n",
-    "        root_val = preorder[preorder_start]\n",
-    "        print(f\"root_val = preorder[{preorder_start}] = {root_val}\")\n",
-    "\n",
-    "        # 查找inorder中根節點的索引\n",
-    "        root_index = self.inorder_index_map[root_val]\n",
-    "        print(f\"root_index = inorder_index_map[{root_val}] = {root_index}\")\n",
-    "\n",
-    "        \n",
-    "        # (preorder: 根節點、左節點、右節點; inorder: 左節點、根節點、右節點)\n",
-    "        # preorder根節點的後面接的是左節點，依序遍歷，但不能遍歷到右節點。而找到inorder根節點的索引後，根節點的前面接的是左節點，所以inorder_end為inorder根節點的索引。\n",
-    "        # 遞迴構建左子樹，preorder_end 用於確定右子樹在preorder的起始索引，確保左子樹在preorder中的範圍是 [(preorder_start + 1) : preorder_end]。\n",
-    "        print(f\"{root_val} - left\")\n",
-    "        print(f\"preorder_start = (preorder_start + 1) = ({preorder_start} + 1), inorder_start = {inorder_start}, inorder_end = root_index = {root_index}\")\n",
-    "        left, preorder_end = self.dfs(preorder_start + 1, inorder_start, root_index, preorder)\n",
-    "        print(f\"{root_val} - left = {left}, preorder_end(右子樹的起始位置) = {preorder_end}\")\n",
-    "\n",
-    "        # (preorder: 根節點、左節點、右節點; inorder: 左節點、根節點、右節點)\n",
-    "        # preorder左節點的後面接的是右節點，依序遍歷，但不能遍歷到下一個根節點。而找到inorder根節點的索引後，根節點的後面接的是右節點，所以inorder_start為inorder根節點的索引+1。\n",
-    "        # 遞迴構建右子樹，preorder_end 會被更新以反映左子樹的結束位置，確保右子樹接在左子樹的後面，且在preorder中的範圍是 [preorder_end, ...]\n",
-    "        print(f\"{root_val} - right\")\n",
-    "        print(f\"preorder_start = preorder_end = {preorder_end}, inorder_start = (root_index + 1) = ({root_index} + 1), inorder_end = {inorder_end}\")\n",
-    "        right, preorder_end = self.dfs(preorder_end, root_index + 1, inorder_end, preorder)\n",
-    "        print(f\"{root_val} - right = {right}, preorder_end(右子樹的起始位置) = {preorder_end}\")\n",
-    "        print(f\"{root_val} - left  = {left}\")\n",
-    "        \n",
-    "\n",
-    "        # 返回構建好的二叉樹節點以及更新後的 preorder_end\n",
-    "        print(f\"- return {TreeNode(root_val, left, right)}, {preorder_end}\")\n",
-    "        return TreeNode(root_val, left, right), preorder_end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "preorder = [3, 9, 20, 15, 7]\n",
-      "inorder = [9, 3, 15, 20, 7]\n",
-      "inorder_index_map = {9: 0, 3: 1, 15: 2, 20: 3, 7: 4}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 0, inorder_start = 0, inorder_end = 5\n",
-      "root_val = preorder[0] = 3\n",
-      "root_index = inorder_index_map[3] = 1\n",
-      "3 - left\n",
-      "preorder_start = (preorder_start + 1) = (0 + 1), inorder_start = 0, inorder_end = root_index = 1\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 1, inorder_start = 0, inorder_end = 1\n",
-      "root_val = preorder[1] = 9\n",
-      "root_index = inorder_index_map[9] = 0\n",
-      "9 - left\n",
-      "preorder_start = (preorder_start + 1) = (1 + 1), inorder_start = 0, inorder_end = root_index = 0\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 2, inorder_start = 0, inorder_end = 0\n",
-      "- (inorder_start = 0) >= (inorder_end = 0)\n",
-      "- return None, 2\n",
-      "9 - left = None, preorder_end(右子樹的起始位置) = 2\n",
-      "9 - right\n",
-      "preorder_start = preorder_end = 2, inorder_start = (root_index + 1) = (0 + 1), inorder_end = 1\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 2, inorder_start = 1, inorder_end = 1\n",
-      "- (inorder_start = 1) >= (inorder_end = 1)\n",
-      "- return None, 2\n",
-      "9 - right = None, preorder_end(右子樹的起始位置) = 2\n",
-      "9 - left  = None\n",
-      "- return <__main__.TreeNode object at 0x105f2ed80>, 2\n",
-      "3 - left = <__main__.TreeNode object at 0x105f2ed80>, preorder_end(右子樹的起始位置) = 2\n",
-      "3 - right\n",
-      "preorder_start = preorder_end = 2, inorder_start = (root_index + 1) = (1 + 1), inorder_end = 5\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 2, inorder_start = 2, inorder_end = 5\n",
-      "root_val = preorder[2] = 20\n",
-      "root_index = inorder_index_map[20] = 3\n",
-      "20 - left\n",
-      "preorder_start = (preorder_start + 1) = (2 + 1), inorder_start = 2, inorder_end = root_index = 3\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 3, inorder_start = 2, inorder_end = 3\n",
-      "root_val = preorder[3] = 15\n",
-      "root_index = inorder_index_map[15] = 2\n",
-      "15 - left\n",
-      "preorder_start = (preorder_start + 1) = (3 + 1), inorder_start = 2, inorder_end = root_index = 2\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 4, inorder_start = 2, inorder_end = 2\n",
-      "- (inorder_start = 2) >= (inorder_end = 2)\n",
-      "- return None, 4\n",
-      "15 - left = None, preorder_end(右子樹的起始位置) = 4\n",
-      "15 - right\n",
-      "preorder_start = preorder_end = 4, inorder_start = (root_index + 1) = (2 + 1), inorder_end = 3\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 4, inorder_start = 3, inorder_end = 3\n",
-      "- (inorder_start = 3) >= (inorder_end = 3)\n",
-      "- return None, 4\n",
-      "15 - right = None, preorder_end(右子樹的起始位置) = 4\n",
-      "15 - left  = None\n",
-      "- return <__main__.TreeNode object at 0x105f2f7a0>, 4\n",
-      "20 - left = <__main__.TreeNode object at 0x105f2f7a0>, preorder_end(右子樹的起始位置) = 4\n",
-      "20 - right\n",
-      "preorder_start = preorder_end = 4, inorder_start = (root_index + 1) = (3 + 1), inorder_end = 5\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 4, inorder_start = 4, inorder_end = 5\n",
-      "root_val = preorder[4] = 7\n",
-      "root_index = inorder_index_map[7] = 4\n",
-      "7 - left\n",
-      "preorder_start = (preorder_start + 1) = (4 + 1), inorder_start = 4, inorder_end = root_index = 4\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 5, inorder_start = 4, inorder_end = 4\n",
-      "- (inorder_start = 4) >= (inorder_end = 4)\n",
-      "- return None, 5\n",
-      "7 - left = None, preorder_end(右子樹的起始位置) = 5\n",
-      "7 - right\n",
-      "preorder_start = preorder_end = 5, inorder_start = (root_index + 1) = (4 + 1), inorder_end = 5\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "preorder_start = 5, inorder_start = 5, inorder_end = 5\n",
-      "- (inorder_start = 5) >= (inorder_end = 5)\n",
-      "- return None, 5\n",
-      "7 - right = None, preorder_end(右子樹的起始位置) = 5\n",
-      "7 - left  = None\n",
-      "- return <__main__.TreeNode object at 0x105f2ce60>, 5\n",
-      "20 - right = <__main__.TreeNode object at 0x105f2ce60>, preorder_end(右子樹的起始位置) = 5\n",
-      "20 - left  = <__main__.TreeNode object at 0x105f2f7a0>\n",
-      "- return <__main__.TreeNode object at 0x105f2f7d0>, 5\n",
-      "3 - right = <__main__.TreeNode object at 0x105f2f7d0>, preorder_end(右子樹的起始位置) = 5\n",
-      "3 - left  = <__main__.TreeNode object at 0x105f2ed80>\n",
-      "- return <__main__.TreeNode object at 0x105f2e3f0>, 5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.TreeNode at 0x105f2e3f0>"
-      ]
-     },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
