--- a/295. Find Median from Data Stream.ipynb
+++ b/295. Find Median from Data Stream.ipynb
@@ -8,51 +8,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(log n)$**  \n",
+    "**空間複雜度: $O( n )$**\n",
+    "\n",
+    "Where  \n",
+    "$m$ is the number of function calls  \n",
+    "$n$ is the length of the array. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Runtime: 87.11%, Memory: 80.81%'''\n",
     "import heapq\n",
+    "\n",
     "class MedianFinder:\n",
     "\n",
     "    def __init__(self):\n",
-    "        minheap = []\n",
-    "        maxheap = []\n",
-    "        heapq.heapify(minheap)\n",
-    "        heapq.heapify(maxheap)\n",
-    "        self.minheap = minheap\n",
-    "        self.maxheap = maxheap\n",
+    "        # 大頂堆（存較小的一半數字，取負數來模擬最大堆）\n",
+    "        self.small = [] # space: O(n)\n",
+    "        # 小頂堆（存較大的一半數字）\n",
+    "        self.large = [] # space: O(n)\n",
     "\n",
     "    def addNum(self, num: int) -> None:\n",
-    "        if not self.minheap and not self.maxheap:\n",
-    "            heapq.heappush(self.minheap, -num)\n",
-    "        elif num < -self.minheap[0]:\n",
-    "            heapq.heappush(self.minheap, -num)\n",
+    "        # 如果 large 有數字且新數字大於 large 的最小值（即 large[0]）\n",
+    "        if self.large and num > self.large[0]:\n",
+    "            heapq.heappush(self.large, num)  # 加入 large 小頂堆 # time: O(log n)\n",
     "        else:\n",
-    "            heapq.heappush(self.maxheap, num)\n",
-    "        print(f\"add {num}: minheap = {self.minheap}, maxheap = {self.maxheap}\")\n",
+    "            heapq.heappush(self.small, -num)  # 加入 small 大頂堆（取負數模擬）# time: O(log n)\n",
     "\n",
+    "        print(f\"\\naddNum-1 -> {self.large = }\")\n",
+    "        print(f\"addNum-1 -> {self.small = }\")\n",
     "\n",
-    "        len_diff = len(self.maxheap) - len(self.minheap)\n",
-    "        if len_diff > 1:\n",
-    "            tmp = heapq.heappop(self.maxheap)\n",
-    "            heapq.heappush(self.minheap, -tmp)\n",
-    "        elif len_diff < -1:\n",
-    "            tmp = heapq.heappop(self.minheap)\n",
-    "            heapq.heappush(self.maxheap, -tmp)\n",
-    "        print(f\"len_diff({len_diff}): minheap = {self.minheap}, maxheap = {self.maxheap}\\n\")\n",
+    "        # 平衡兩個堆的大小，如果 small 比 large 多超過 1 個元素\n",
+    "        if len(self.small) >= len(self.large) + 1:\n",
+    "            value = heapq.heappop(self.small)  # 取出 small 最大值（實際是最小的負數）# time: O(log n)\n",
+    "            heapq.heappush(self.large, -value)  # 放入 large（轉回正數）# time: O(log n)\n",
     "        \n",
+    "        # 如果 large 比 small 多超過 1 個元素\n",
+    "        if len(self.large) >= len(self.small) + 1:\n",
+    "            value = heapq.heappop(self.large)  # 取出 large 最小值 # time: O(log n)\n",
+    "            heapq.heappush(self.small, -value)  # 放入 small（轉為負數模擬最大堆）# time: O(log n)\n",
+    "\n",
+    "        print(f\"addNum-2 -> {self.large = }\")\n",
+    "        print(f\"addNum-2 -> {self.small = }\")\n",
+    "\n",
     "    def findMedian(self) -> float:\n",
-    "        if not self.minheap and not self.maxheap:\n",
-    "            return 0\n",
-    "        elif len(self.minheap) > len(self.maxheap):\n",
-    "            return - self.minheap[0]\n",
-    "        elif len(self.minheap) < len(self.maxheap):\n",
-    "            return self.maxheap[0]\n",
+    "        # 如果 large 堆的元素比較多，代表總數是奇數，中位數就是 large[0]\n",
+    "        if len(self.large) > len(self.small):\n",
+    "            return self.large[0] # time: O(1)\n",
+    "        # 如果 small 堆的元素比較多，中位數是 -self.small[0]\n",
+    "        elif len(self.small) > len(self.large):\n",
+    "            return -self.small[0] # time: O(1)\n",
     "        else:\n",
-    "            return (- self.minheap[0] + self.maxheap[0]) / 2"
+    "            # 如果兩堆長度相同，代表總數是偶數，中位數為兩個堆頂的平均\n",
+    "            return (self.large[0] + -self.small[0]) / 2 # time: O(1)"
    ]
   },
   {
@@ -64,44 +79,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "add 2: minheap = [-2], maxheap = []\n",
-      "len_diff(-1): minheap = [-2], maxheap = []\n",
       "\n",
-      "add 4: minheap = [-2], maxheap = [4]\n",
-      "len_diff(0): minheap = [-2], maxheap = [4]\n",
+      "addNum-1 -> self.large = []\n",
+      "addNum-1 -> self.small = [-1]\n",
+      "addNum-2 -> self.large = []\n",
+      "addNum-2 -> self.small = [-1]\n",
+      "obj.small = [-1], obj.large = []\n",
       "\n",
-      "add 1: minheap = [-2, -1], maxheap = [4]\n",
-      "len_diff(-1): minheap = [-2, -1], maxheap = [4]\n",
       "\n",
-      "2 \n",
+      "addNum-1 -> self.large = []\n",
+      "addNum-1 -> self.small = [-2, -1]\n",
+      "addNum-2 -> self.large = [2]\n",
+      "addNum-2 -> self.small = [-1]\n",
+      "obj.small = [-1], obj.large = [2]\n",
       "\n",
-      "add -1: minheap = [-2, -1, 1], maxheap = [4]\n",
-      "len_diff(-2): minheap = [-1, 1], maxheap = [2, 4]\n",
+      "median = 1.5\n",
       "\n",
-      "1.5 \n",
       "\n",
-      "add 5: minheap = [-1, 1], maxheap = [2, 4, 5]\n",
-      "len_diff(1): minheap = [-1, 1], maxheap = [2, 4, 5]\n",
+      "addNum-1 -> self.large = [2, 3]\n",
+      "addNum-1 -> self.small = [-1]\n",
+      "addNum-2 -> self.large = [3]\n",
+      "addNum-2 -> self.small = [-2, -1]\n",
+      "obj.small = [-2, -1], obj.large = [3]\n",
       "\n",
-      "add 3: minheap = [-1, 1], maxheap = [2, 3, 5, 4]\n",
-      "len_diff(2): minheap = [-2, 1, -1], maxheap = [3, 4, 5]\n",
-      "\n",
-      "2.5 \n",
+      "median = 2\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "medianFinder = MedianFinder()\n",
-    "medianFinder.addNum(2)\n",
-    "medianFinder.addNum(4)\n",
-    "medianFinder.addNum(1)\n",
-    "print(medianFinder.findMedian(), \"\\n\")\n",
-    "medianFinder.addNum(-1)\n",
-    "print(medianFinder.findMedian(), \"\\n\")\n",
-    "medianFinder.addNum(5)\n",
-    "medianFinder.addNum(3)\n",
-    "print(medianFinder.findMedian(), \"\\n\")"
+    "# Input\n",
+    "# [\"MedianFinder\", \"addNum\", \"addNum\", \"findMedian\", \"addNum\", \"findMedian\"]\n",
+    "# [[], [1], [2], [], [3], []]\n",
+    "# Output\n",
+    "# [null, null, null, 1.5, null, 2.0]\n",
+    "\n",
+    "# Your MedianFinder object will be instantiated and called as such:\n",
+    "obj = MedianFinder()\n",
+    "obj.addNum(1)\n",
+    "print(f\"{obj.small = }, {obj.large = }\\n\")\n",
+    "obj.addNum(2)\n",
+    "print(f\"{obj.small = }, {obj.large = }\\n\")\n",
+    "median = obj.findMedian()\n",
+    "print(f\"{median = }\\n\")\n",
+    "obj.addNum(3)\n",
+    "print(f\"{obj.small = }, {obj.large = }\\n\")\n",
+    "median = obj.findMedian()\n",
+    "print(f\"{median = }\\n\")"
    ]
   },
   {
@@ -109,29 +133,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "'''Runtime: 5.2%, Memory: 7.47%'''\n",
-    "class MedianFinder:\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        self.list = []\n",
-    "\n",
-    "    def addNum(self, num: int) -> None:\n",
-    "        self.list.append(num)\n",
-    "\n",
-    "    def findMedian(self) -> float:\n",
-    "        self.list = sorted(self.list)\n",
-    "        n = len(self.list)\n",
-    "        if n % 2 != 0:\n",
-    "            return self.list[(n//2)]\n",
-    "        else:\n",
-    "            return (self.list[(n//2) - 1] + self.list[(n//2)]) / 2"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -145,14 +152,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "6a07fcf0145f94b3f971c13d061528107de20ab7b779375f96dab9bbac6a85db"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
