--- a/297. Serialize and Deserialize Binary Tree.ipynb
+++ b/297. Serialize and Deserialize Binary Tree.ipynb
@@ -14,119 +14,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import collections"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Definition for a binary tree node.\n",
     "class TreeNode(object):\n",
     "    def __init__(self, x):\n",
     "        self.val = x\n",
     "        self.left = None\n",
-    "        self.right = None\n",
-    "\n",
-    "class Codec:\n",
-    "\n",
-    "    def serialize(self, root):\n",
-    "        \"\"\"Encodes a tree to a single string.\n",
-    "        \n",
-    "        :type root: TreeNode\n",
-    "        :rtype: str\n",
-    "        \"\"\"\n",
-    "        print(\"=============== serialize ===============\")\n",
-    "        flat_bt = [] # 儲存序列化後的節點值\n",
-    "        queue = collections.deque([root]) # 使用雙向佇列來進行層級遍歷\n",
-    "        while queue:\n",
-    "            print(f\"origin: queue = {queue}\")\n",
-    "            node = queue.pop() # 從佇列中彈出最後一個節點\n",
-    "            print(f\"origin: node = {node}\")\n",
-    "\n",
-    "            if node: # 如果節點不為None\n",
-    "                flat_bt.append(str(node.val)) # 將節點值轉換成字串後加入flat_bt\n",
-    "\n",
-    "                # 將節點的左子樹和右子樹加入佇列中\n",
-    "                queue.appendleft(node.left) # 從左邊插入，確保左子樹先處理\n",
-    "                queue.appendleft(node.right)\n",
-    "                print(f\"new: queue = {queue}\")\n",
-    "            else:\n",
-    "                flat_bt.append('') # 如果節點為None，將空字串加入flat_bt表示空節點\n",
-    "            \n",
-    "            print(f\"flat_bt = {flat_bt}\\n\")\n",
-    "\n",
-    "        result = ','.join(flat_bt) # 將元素以逗號分隔並合併成字串\n",
-    "        print(f\"result = {result}\\n\")\n",
-    "\n",
-    "        return result\n",
-    "        \n",
-    "\n",
-    "    def deserialize(self, data):\n",
-    "        \"\"\"Decodes your encoded data to tree.\n",
-    "        \n",
-    "        :type data: str\n",
-    "        :rtype: TreeNode\n",
-    "        \"\"\"\n",
-    "        print(\"=============== serialize ===============\")\n",
-    "        if not data:\n",
-    "            return \n",
-    "\n",
-    "        flat_bt = data.split(',') # 將序列化後的字串以逗號為分隔符轉換成串列\n",
-    "        ans = TreeNode(flat_bt[0]) # 建立一個樹的根節點，根節點的值為flat_bt的第一個元素\n",
-    "        queue = collections.deque([ans]) # 使用雙向佇列來進行二元樹的反序列化\n",
-    "\n",
-    "        i = 1  # 從flat_bt的第二個元素開始處理\n",
-    "        # when you pop a node, its children will be at i and i+1\n",
-    "        while queue:\n",
-    "            print(f\"origin: ans = {ans}\")\n",
-    "            print(f\"origin: queue = {queue}\")\n",
-    "            node = queue.pop() # 從佇列中彈出最後一個節點\n",
-    "            print(f\"node = {node}\")\n",
-    "\n",
-    "            print(f\"-> ((i = {i}) < (len(flat_bt) = {len(flat_bt)})) and (flat_bt[i] = {flat_bt[i]}))\")\n",
-    "            if i < len(flat_bt) and flat_bt[i]: # 如果i小於flat_bt的長度 且 flat_bt[i]不為空字串\n",
-    "                node.left = TreeNode(int(flat_bt[i])) # 建立左子節點並將節點值設為flat_bt[i]\n",
-    "                queue.appendleft(node.left) # 將左子節點加入佇列中，從左邊插入，確保左子樹先處理\n",
-    "                print(f\"--> new: node = {node}\")\n",
-    "                print(f\"--> new: queue = {queue}\")\n",
-    "            i += 1\n",
-    "            \n",
-    "            print(f\"-> ((i = {i}) < (len(flat_bt) = {len(flat_bt)})) and (flat_bt[i] = {flat_bt[i]}))\")\n",
-    "            if i < len(flat_bt) and flat_bt[i]:\n",
-    "                node.right = TreeNode(int(flat_bt[i])) # 建立右子節點並將節點值設為flat_bt[i]\n",
-    "                queue.appendleft(node.right) # 將右子節點加入佇列中，從左邊插入，確保左子樹先處理\n",
-    "                print(f\"--> new: node = {node}\")\n",
-    "                print(f\"--> new: queue = {queue}\")\n",
-    "            i += 1\n",
-    "\n",
-    "            print(f\"new: ans = {ans}\\n\")\n",
-    "\n",
-    "        return ans\n",
-    "        \n",
-    "# Your Codec object will be instantiated and called as such:\n",
-    "# ser = Codec()\n",
-    "# deser = Codec()\n",
-    "# ans = deser.deserialize(ser.serialize(root))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ans 變數在每次從佇列中彈出一個節點時重新賦值。\n",
-    "\n",
-    "在 deserialize 方法中，一開始我們創建了一個二元樹的根節點 ans，並將其設置為 flat_bt 的第一個元素。\n",
-    "\n",
-    "在後續的迴圈中，每次從佇列中彈出一個節點時，我們都會通過 node 變數來引用該節點，並根據需要設置其左子節點或右子節點。這樣，ans 變數就始終引用著二元樹的根節點，並在遍歷佇列時根據需要重新賦值。"
+    "        self.right = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,20 +36,204 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O( n )$**  \n",
+    "**空間複雜度: $O( n )$**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BFS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import deque\n",
+    "\n",
+    "class Codec:\n",
+    "\n",
+    "    def serialize(self, root):\n",
+    "        \"\"\"Encodes a tree to a single string.\n",
+    "        \n",
+    "        :type root: TreeNode\n",
+    "        :rtype: str\n",
+    "        \"\"\"\n",
+    "        if not root:\n",
+    "            return \"N\"  # 空樹則直接回傳 \"N\"\n",
+    "\n",
+    "        result = []  # 用來儲存序列化後的結果 # space: O(n)\n",
+    "        queue = deque([root])  # 使用 deque 實作 BFS 的佇列 # space: O(n)\n",
+    "\n",
+    "        while queue: # time: O(n)\n",
+    "            node = queue.popleft()  # 取出佇列左側的節點\n",
+    "            if not node:\n",
+    "                result.append(\"N\")  # 空節點用 \"N\" 表示\n",
+    "            else:\n",
+    "                result.append(str(node.val))  # 將節點值轉為字串後加入結果\n",
+    "                queue.append(node.left)    # 將左子節點加入佇列\n",
+    "                queue.append(node.right)   # 將右子節點加入佇列\n",
+    "\n",
+    "        return \",\".join(result)  # 將結果陣列轉為以逗號分隔的字串\n",
+    "\n",
+    "    def deserialize(self, data):\n",
+    "        \"\"\"Decodes your encoded data to tree.\n",
+    "        \n",
+    "        :type data: str\n",
+    "        :rtype: TreeNode\n",
+    "        \"\"\"\n",
+    "        if data == \"N\":\n",
+    "            return None  # 空樹則回傳 None\n",
+    "\n",
+    "        values = data.split(\",\")  # 將序列化字串轉為陣列 # space: O(n)\n",
+    "\n",
+    "        root = TreeNode(int(values[0]))  # 建立根節點\n",
+    "        queue = deque([root])          # 佇列用來依序還原左右子節點 # space: O(n)\n",
+    "        index = 1                      # 索引指向下一個待處理的值\n",
+    "\n",
+    "        while queue: # time: O(n)\n",
+    "            node = queue.popleft()  # 取出佇列中節點\n",
+    "\n",
+    "            # 還原左子節點\n",
+    "            if values[index] != \"N\":\n",
+    "                node.left = TreeNode(int(values[index]))  # 建立左子節點\n",
+    "                queue.append(node.left)                # 加入佇列以處理其子節點\n",
+    "            index += 1\n",
+    "\n",
+    "            # 還原右子節點\n",
+    "            if values[index] != \"N\":\n",
+    "                node.right = TreeNode(int(values[index]))  # 建立右子節點\n",
+    "                queue.append(node.right)                 # 加入佇列以處理其子節點\n",
+    "            index += 1\n",
+    "\n",
+    "        return root  # 回傳整棵還原的樹"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ser.serialize(root) = '1,2,3,N,N,4,5,N,N,N,N'\n",
+      "ans = <__main__.TreeNode object at 0x112408c80>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your Codec object will be instantiated and called as such:\n",
     "ser = Codec()\n",
     "deser = Codec()\n",
-    "ans = deser.deserialize(ser.serialize(root))"
+    "ans = deser.deserialize(ser.serialize(root))\n",
+    "print(f\"{ser.serialize(root) = }\")\n",
+    "print(f\"{ans = }\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DFS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Codec:\n",
+    "\n",
+    "    def serialize(self, root):\n",
+    "        \"\"\"Encodes a tree to a single string.\n",
+    "        \n",
+    "        :type root: TreeNode\n",
+    "        :rtype: str\n",
+    "        \"\"\"\n",
+    "        result = []  # 用來存儲序列化結果的陣列 # space: O(n)\n",
+    "\n",
+    "        def dfs(node): # time, space: O(n)\n",
+    "            if not node:\n",
+    "                result.append(\"N\")  # 若為空節點，用 \"N\" 表示\n",
+    "                return\n",
+    "\n",
+    "            result.append(str(node.val))  # 加入當前節點的值\n",
+    "\n",
+    "            dfs(node.left)             # 遞迴處理左子樹\n",
+    "            dfs(node.right)            # 遞迴處理右子樹\n",
+    "\n",
+    "        dfs(root)  # 從根節點開始 DFS 序列化整棵樹\n",
+    "\n",
+    "        return \",\".join(result)  # 將結果轉為以逗號分隔的字串\n",
+    "\n",
+    "    def deserialize(self, data):\n",
+    "        \"\"\"Decodes your encoded data to tree.\n",
+    "        \n",
+    "        :type data: str\n",
+    "        :rtype: TreeNode\n",
+    "        \"\"\"\n",
+    "        values = data.split(\",\")  # 將序列化字串分割為陣列 # space: O(n)\n",
+    "        self.index = 0              # 使用索引來追蹤目前處理到哪一個節點\n",
+    "\n",
+    "        def dfs(): # time, space: O(n)\n",
+    "            if values[self.index] == \"N\":\n",
+    "                self.index += 1     # 空節點，跳過\n",
+    "                return None\n",
+    "\n",
+    "            node = TreeNode(int(values[self.index]))  # 建立新節點\n",
+    "            self.index += 1\n",
+    "\n",
+    "            node.left = dfs()   # 遞迴建立左子樹\n",
+    "            node.right = dfs()  # 遞迴建立右子樹\n",
+    "\n",
+    "            return node         # 回傳建好的子樹\n",
+    "\n",
+    "        return dfs()  # 回傳整棵還原的二元樹\n",
+    "\n",
+    "    \n",
+    "# Your Codec object will be instantiated and called as such:\n",
+    "# ser = Codec()\n",
+    "# deser = Codec()\n",
+    "# ans = deser.deserialize(ser.serialize(root))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ser.serialize(root) = '1,2,N,N,3,4,N,N,5,N,N'\n",
+      "ans = <__main__.TreeNode object at 0x112454890>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your Codec object will be instantiated and called as such:\n",
+    "ser = Codec()\n",
+    "deser = Codec()\n",
+    "ans = deser.deserialize(ser.serialize(root))\n",
+    "print(f\"{ser.serialize(root) = }\")\n",
+    "print(f\"{ans = }\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4
  },
